# fast-calib-mid360-hikvision-20260617

./: .gitattributes  .gitignore  CMakeLists.txt  CURRENT_SETUP.md  README.md
calibration_record/: README.md  device_config.md  final_result_20260617.md  interactive_workflow.md  pitfalls_and_solutions.md  quick_start.md
config/: livox_mid360_fast_calib.json  livox_mid360_ip_change_netns.json  qr_params.yaml  qr_params_current_static_pair_20260612.yaml  qr_params_current_static_pair_adjusted_20260617.yaml  qr_params_current_static_pair_adjusted_20260617_roi_wide.yaml  qr_params_current_static_pair_adjusted_20260617_roi_x_near_wide_y.yaml  qr_params_current_static_pair_adjusted_20260617_roi_y_positive.yaml  qr_params_current_static_pair_adjusted_20260617_roi_y_wide.yaml  qr_params_current_static_pair_adjusted_20260617_roi_z_negative.yaml  qr_params_current_static_pair_adjusted_20260617_y0_roi_a.yaml  qr_params_current_static_pair_adjusted_20260617_y0_roi_b.yaml  qr_params_current_static_pair_adjusted_20260617_y0_roi_c.yaml  qr_params_current_static_pair_adjusted_20260617_y0_roi_wide.yaml  qr_params_current_static_pair_blackboard_20260617_r2.yaml  qr_params_current_static_pair_blackboard_lights_off_20260617.yaml  qr_params_current_static_pair_long.yaml  qr_params_current_static_pair_y0_full_20260617.yaml  qr_params_current_static_pair_y0_full_20260617_x_board_y_wide.yaml  qr_params_current_static_pair_y0_full_20260617_x_wide_y_center.yaml  qr_params_current_static_pair_y0_full_20260617_xy_very_wide.yaml  qr_params_current_static_pair_y0_full_20260617_xy_wide_a.yaml  qr_params_current_static_pair_y0_full_20260617_xy_wide_b.yaml  qr_params_current_static_pair_y0_full_20260617_z_lower.yaml  qr_params_current_static_pair_y0_full_20260617_z_upper.yaml  qr_params_current_static_pair_y0_full_20260617_z_wide_a.yaml  qr_params_current_static_pair_y0_full_20260617_z_wide_b.yaml  qr_params_final_success_20260617.yaml
include/: common_lib.h
launch/: calib.launch.py  mid360_pointcloud2_launch.py
output/final_success_20260617/: calib_result.txt  filtered_cloud.ply  manual_lidar_holes.yaml
rviz_cfg/: livox_bag_detected_holes.rviz  livox_lidar_bag.rviz  livox_lidar_bag_xyz.rviz  static_accumulated_holes.rviz
scripts/: capture_and_run_scene.sh  diagnose_board_plane.py  interactive_calibration_workflow.sh  interactive_lidar_hole_editor.py  publish_detected_holes.py  publish_static_cloud_with_holes.py  run_fast_calib_scene.sh
src/: lidar_detect.hpp  main.cpp  qr_detect.hpp
tools/: grab_hikvision_png.cpp  manual_lidar_centers_calib.cpp  set_livox_ip.cpp
(+2 files in other folders)
