cmake_minimum_required(VERSION 3.8)
project(fast_calib)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(pcl_conversions REQUIRED)
find_package(rosbag2_cpp REQUIRED)

find_package(PCL 1.10 REQUIRED)
find_package(OpenCV REQUIRED)

# Include directories
include_directories(
  include
  ${PCL_INCLUDE_DIRS}
  ${OpenCV_INCLUDE_DIRS}
)
# Set build type
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

if (CMAKE_BUILD_TYPE STREQUAL "Release")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
endif()

# Create executable
add_executable(fast_calib src/main.cpp)
add_executable(grab_hikvision_png tools/grab_hikvision_png.cpp)
add_executable(set_livox_ip tools/set_livox_ip.cpp)
add_executable(manual_lidar_centers_calib tools/manual_lidar_centers_calib.cpp)

# Link libraries
ament_target_dependencies(fast_calib
  rclcpp
  sensor_msgs
  pcl_conversions
  rosbag2_cpp
)

target_link_libraries(fast_calib
  ${PCL_LIBRARIES}
  ${OpenCV_LIBRARIES}
)

ament_target_dependencies(manual_lidar_centers_calib
  rclcpp
  sensor_msgs
  pcl_conversions
  rosbag2_cpp
)

target_link_libraries(manual_lidar_centers_calib
  ${PCL_LIBRARIES}
  ${OpenCV_LIBRARIES}
)

target_include_directories(grab_hikvision_png PRIVATE
  /opt/MVS/include
  ${OpenCV_INCLUDE_DIRS}
)

target_link_directories(grab_hikvision_png PRIVATE /opt/MVS/lib/64)

target_link_libraries(grab_hikvision_png
  ${OpenCV_LIBRARIES}
  MvCameraControl
)

set_target_properties(grab_hikvision_png PROPERTIES
  INSTALL_RPATH "/opt/MVS/lib/64"
)

target_link_libraries(set_livox_ip
  livox_lidar_sdk_shared
)

# Install
install(TARGETS
  fast_calib
  grab_hikvision_png
  set_livox_ip
  manual_lidar_centers_calib
  DESTINATION lib/${PROJECT_NAME}
)

install(PROGRAMS
  scripts/capture_and_run_scene.sh
  scripts/diagnose_board_plane.py
  scripts/interactive_calibration_workflow.sh
  scripts/interactive_lidar_hole_editor.py
  scripts/publish_detected_holes.py
  scripts/publish_static_cloud_with_holes.py
  scripts/run_fast_calib_scene.sh
  DESTINATION lib/${PROJECT_NAME}
)

# Install launch files
install(DIRECTORY
  launch
  config
  rviz_cfg
  DESTINATION share/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
